// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<label
  className="sc-hQqMrg fgiWsE"
>
  <input
    checked={true}
    className="sc-cyAtEZ frEECH"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="sc-dxuyJz jkWyGn"
  />
</label>
`;

exports[`Switch renders RTL 1`] = `
<div
  dir="rtl"
>
  <label
    className="sc-hQqMrg fgiWsE"
  >
    <input
      checked={true}
      className="sc-cyAtEZ frEECH"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxuyJz jkWyGn"
    />
  </label>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<label
  className="sc-hQqMrg fgiWsE"
>
  <input
    checked={true}
    className="sc-cyAtEZ gZuuly"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="sc-dxuyJz kBtOjZ"
  />
</label>
`;

exports[`Switch renders Theme variant with Caption 1`] = `
<div
  className="sc-eiNpmX cRqeSG"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="sc-cXqLfI sc-dRXgYj iXWQEn cGDkrl"
    color="bulma.100"
  >
    AM
  </span>
  <label
    className="sc-hQqMrg fgiWsE"
  >
    <input
      checked={true}
      className="sc-cyAtEZ gZuuly"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxuyJz kBtOjZ"
    />
  </label>
  <span
    checked={false}
    className="sc-cXqLfI sc-dRXgYj iXWQEn gwofpp"
    color="bulma.100"
  >
    PM
  </span>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <label
    className="sc-hQqMrg kelsaS"
    size="xs"
  >
    <input
      checked={true}
      className="sc-cyAtEZ kumDEI"
      id="test-switch-1"
      onChange={[Function]}
      size="xs"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxuyJz jkWyGn"
    />
  </label>
  <label
    className="sc-hQqMrg fRizWZ"
    size="md"
  >
    <input
      checked={true}
      className="sc-cyAtEZ kumDEI"
      id="test-switch-2"
      onChange={[Function]}
      size="md"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxuyJz jkWyGn"
    />
  </label>
  <label
    className="sc-hQqMrg uMlUs"
    size="lg"
  >
    <input
      checked={true}
      className="sc-cyAtEZ kumDEI"
      id="test-switch-3"
      onChange={[Function]}
      size="lg"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxuyJz jkWyGn"
    />
  </label>
</div>
`;

exports[`Switch renders with Caption 1`] = `
<div
  className="sc-eiNpmX cRqeSG"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="sc-cXqLfI sc-dRXgYj iXWQEn cGDkrl"
    color="bulma.100"
  >
    OFF
  </span>
  <label
    className="sc-hQqMrg fgiWsE"
  >
    <input
      checked={true}
      className="sc-cyAtEZ frEECH"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-dxuyJz jkWyGn"
    />
  </label>
  <span
    checked={false}
    className="sc-cXqLfI sc-dRXgYj iXWQEn gwofpp"
    color="bulma.100"
  >
    ON
  </span>
</div>
`;
